--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+# existing…
 fastapi
 uvicorn
 icalendar
 python-dotenv
 openai
+jupyter
+requests
+
+# add for Google Calendar integration
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+
